--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
 	<properties>
 		<java.version>11</java.version>
 		
+		<javax.validation.version>2.0.0.Final</javax.validation.version>
 		<org.projectlombok.version>1.18.24</org.projectlombok.version>
 	</properties>
 	
@@ -31,6 +32,10 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-jdbc</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
 		
 		<!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
 		<dependency>
@@ -38,6 +43,12 @@
 			<artifactId>lombok</artifactId>
 			<version>${org.projectlombok.version}</version>
 			<optional>true</optional>
+		</dependency>
+		
+		<dependency>
+			<groupId>javax.validation</groupId>
+			<artifactId>validation-api</artifactId>
+			<version>${javax.validation.version}</version>
 		</dependency>
 
 		<dependency>
